// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider rtl render component should be rendered correctly in RTL direction 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-slider dcloud-slider-rtl"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="right: 0%; width: 0%;"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="dcloud-slider-handle"
      role="slider"
      style="right: 0%; transform: translateX(+50%);"
      tabindex="0"
    />
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Slider should render in RTL direction 1`] = `
LoadedCheerio {
  "0": <div
    class="dcloud-slider dcloud-slider-rtl"
  >
    <div
      class="dcloud-slider-rail"
    />
    <div
      class="dcloud-slider-track"
      style="right:0%;left:auto;width:30%"
    />
    <div
      class="dcloud-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="dcloud-slider-handle dcloud-tooltip-open"
      role="slider"
      style="right:30%;left:auto;transform:translateX(+50%)"
      tabindex="0"
    />
    <div>
      <div
        class="dcloud-tooltip dcloud-slider-tooltip dcloud-tooltip-rtl"
        style="opacity:0"
      >
        <div
          class="dcloud-tooltip-content"
        >
          <div
            class="dcloud-tooltip-arrow"
          >
            <span
              class="dcloud-tooltip-arrow-content"
            />
          </div>
          <div
            class="dcloud-tooltip-inner"
            role="tooltip"
          >
            30
          </div>
        </div>
      </div>
    </div>
    <div
      class="dcloud-slider-mark"
    />
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Slider should show correct placement tooltip when set tooltipPlacement 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="dcloud-tooltip dcloud-slider-tooltip"
      style="opacity:0"
    >
      <div
        class="dcloud-tooltip-content"
      >
        <div
          class="dcloud-tooltip-arrow"
        >
          <span
            class="dcloud-tooltip-arrow-content"
          />
        </div>
        <div
          class="dcloud-tooltip-inner"
          role="tooltip"
        >
          30
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Slider should show correct placement tooltip when set tooltipPlacement 2`] = `
LoadedCheerio {
  "0": <div />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Slider should show tooltip when hovering slider handler 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class="dcloud-tooltip dcloud-slider-tooltip"
      style="opacity:0"
    >
      <div
        class="dcloud-tooltip-content"
      >
        <div
          class="dcloud-tooltip-arrow"
        >
          <span
            class="dcloud-tooltip-arrow-content"
          />
        </div>
        <div
          class="dcloud-tooltip-inner"
          role="tooltip"
        >
          30
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Slider should show tooltip when hovering slider handler 2`] = `
LoadedCheerio {
  "0": <div />,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
